# clr_ws

./: .dockerignore  .env  .env.default  .flake8  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  Dockerfile  HARDWARE.md  README.md  docker-compose.yml  pixi.toml
.github/workflows/: build_and_push.yml  build_and_test.yml  format.yml  scheduled_functional_tests.yml
clr_pick_and_place_demo/: README.md
clr_pick_and_place_demo/config/: waypoints.yaml
clr_pick_and_place_demo/launch/: demo_planning_viz.launch.py
clr_pick_and_place_demo/src/: run_demo.cpp
config/: colcon-defaults.yaml
docker/: Dockerfile.pixi
docs/: TROUBLESHOOTING.md  USING_PIXI.md
scripts/: entrypoint_pixi.sh
src/clr_demos/: README.md
src/clr_demos/clr_behavior_pick_and_place_demo/: README.md
src/clr_demos/clr_behavior_pick_and_place_demo/config/: clr_behaviors.rviz  clr_pick_and_place_config.yaml
src/clr_demos/clr_behavior_pick_and_place_demo/launch/: pick_and_place_behavior.launch.py
src/clr_demos/clr_pick_and_place_demo/config/: demo_kinematics.yaml  waypoints.yaml
src/clr_demos/clr_pick_and_place_demo/launch/: demo.launch.py
src/clr_demos/clr_roboplan_demos/: CMakeLists.txt  README.md  package.xml
src/clr_demos/clr_roboplan_demos/clr_roboplan_demos/: __init__.py
src/clr_demos/clr_roboplan_demos/config/: clr_oink_config.rviz  clr_roboplan_config.rviz  clr_roboplan_config.yaml
src/clr_demos/clr_roboplan_demos/launch/: chonkur_example_streaming.launch.yaml  clr_example_planning.launch.yaml
src/clr_demos/clr_roboplan_demos/scripts/: chonkur_oink_streaming_node.py  plan_and_execute_node.py
src/clr_functional_tests/: CMakeLists.txt  package.xml
src/clr_functional_tests/launch/: test_launch.py
src/clr_functional_tests/test/: clr_kinematic_sim_test.py  clr_launch_test.py  clr_mujoco_sim_test.py  clr_test.py
src/clr_roboplan_demos/: CMakeLists.txt  README.md  package.xml
src/clr_roboplan_demos/config/: clr_roboplan_config.yaml
src/clr_roboplan_demos/scripts/: plan_and_execute_node.py  viser_ik.py  viser_ik_rrt.py
src/clr_sim_demos/clr_behavior_pick_and_place_demo/: CMakeLists.txt  README.md  package.xml
src/clr_sim_demos/clr_behavior_pick_and_place_demo/behavior_trees_xml/: bag_pick_up.xml
src/clr_sim_demos/clr_behavior_pick_and_place_demo/config/: clr_pick_and_place_config.yaml
src/clr_sim_demos/clr_behavior_pick_and_place_demo/launch/: pick_and_place_behavior.launch.py
src/clr_sim_demos/clr_pick_and_place_demo/: CMakeLists.txt  package.xml
src/clr_sim_demos/clr_pick_and_place_demo/launch/: demo_planning_viz.launch.py
src/clr_sim_demos/clr_pick_and_place_demo/rviz/: demo_config.rviz
