<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>clr_functional_tests</name>
  <version>0.0.0</version>
  <description>Tests for the CLR workspace</description>
  <maintainer email="erik.holum@nasa.gov">Erik Holum</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>
  <test_depend>clr_deploy</test_depend>
  <test_depend>clr_mujoco_config</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
