<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>clr_roboplan_demos</name>
  <version>0.1.0</version>
  <description>CLR ROS example for RoboPlan.</description>
  <maintainer email="scastro@respiterobotics.com">Sebastian Castro</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>roboplan</depend>
  <depend>roboplan_simple_ik</depend>
  <depend>xacro</depend>

  <!-- <exec_depend>controller_manager</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>topic_tools</exec_depend> -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
