<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>clr_roboplan_demos</name>
  <version>0.1.0</version>
  <description>CLR ROS example for RoboPlan.</description>
  <maintainer email="scastro@respiterobotics.com">Sebastian Castro</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>roboplan</depend>
  <depend>roboplan_simple_ik</depend>
  <depend>roboplan_oink</depend>
  <depend>roboplan_rrt</depend>
  <depend>roboplan_toppra</depend>
  <depend>xacro</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
