<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>clr_behavior_pick_and_place_demo</name>
  <version>1.0.0</version>
  <description>Demo of using behavior trees for CLR robot simulation</description>
  <maintainer email="misha.savchenko@nasa.gov">Misha Savchenko</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>drt_behavior</depend>
  <depend>moveit_behavior</depend>
  <depend>color_tools_behavior</depend>
  <depend>geometry_behavior</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
